improve navbar and improve performance

--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -6,7 +6,7 @@
         <p class="mb-4 text-gray-500">{{'footer.desc' | translate}}</p>
       </div>
       <div class="flex flex-col md:flex-row justify-between gap-5">
-        <input type="email" class="flex-grow text-gray-500 outline-none border-none focus:border-none rounded-lg" placeholder="example123@gmail.com" name="">
+        <input type="email" class="flex-grow px-2 text-gray-500 outline-none border-none focus:border-none rounded-lg" placeholder="example123@gmail.com" name="">
         <button class="p-2 bg-green-600 text-white rounded-lg">{{'footer.btn' | translate}}</button>
       </div>
     </div>
