--- a/src/app/pages/brands/brands.component.html
+++ b/src/app/pages/brands/brands.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-5">
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-5">
     @for (brand of brands(); track brand._id) {
       <div class="border border-green-500 p-2 rounded-2xl overflow-hidden">
         <img loading="lazy" [src]="brand.image" class="h-[150px] w-full object-contain" [alt]="brand.name" />
